--- a/app/src/main/res/navigation/navigation_home.xml
+++ b/app/src/main/res/navigation/navigation_home.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/home_fragment"
         android:name="com.mikolove.allmight.views.home.HomeFragment"
-        android:label="HomeFragment"
+        android:label="@string/app_name"
         tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_home_fragment_to_chooseWorkoutFragment"
@@ -17,7 +17,7 @@
     <fragment
         android:id="@+id/choose_workout_fragment"
         android:name="com.mikolove.allmight.views.home.choose.ChooseWorkoutFragment"
-        android:label="ChooseWorkoutFragment"
-        tools:layout="@layout/fragment_choose_workout"/>
+        android:label="@string/workout_title"
+        tools:layout="@layout/fragment_choose_workout" />
 
 </navigation>
