--- a/app/src/main/res/layout/fragment_settings_details_workout.xml
+++ b/app/src/main/res/layout/fragment_settings_details_workout.xml
@@ -4,7 +4,6 @@
         xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
                 name="detailWorkoutSettingsViewModel"
                 type="com.mikolove.allmight.views.settings.detail.SettingsDetailWorkoutViewModel" />
@@ -55,7 +54,7 @@
                 android:layout_marginTop="8dp"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:text="@={detailWorkoutSettingsViewModel.workout.name}"
+                android:text="@={detailWorkoutSettingsViewModel.workoutWithExercise.workout.name}"
                 app:layout_constraintEnd_toEndOf="@+id/detail_workout_settings_txt_title_name"
                 app:layout_constraintStart_toStartOf="@+id/detail_workout_settings_txt_title_name"
                 app:layout_constraintTop_toBottomOf="@+id/detail_workout_settings_txt_title_name" />
@@ -74,7 +73,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="1dp"
-            android:checked="@={detailWorkoutSettingsViewModel.workout.status}"
+            android:checked="@={detailWorkoutSettingsViewModel.workoutWithExercise.workout.status}"
             app:layout_constraintBottom_toBottomOf="@+id/detail_workout_settings_edit_name"
             app:layout_constraintEnd_toEndOf="@+id/detail_workout_settings_txt_status_name"
             app:layout_constraintTop_toBottomOf="@+id/detail_workout_settings_txt_status_name" />
