--- a/app/src/main/res/layout/fragment_settings_details_exercise.xml
+++ b/app/src/main/res/layout/fragment_settings_details_exercise.xml
@@ -137,8 +137,8 @@
             app:layout_constraintEnd_toStartOf="@+id/guideline"
             app:layout_constraintStart_toStartOf="@+id/detail_exercise_settings_txt_title_series"
             app:layout_constraintTop_toBottomOf="@+id/detail_exercise_settings_txt_title_series"
-            app:setData="@{detailExerciseSettingsViewModel.listSeries}"
-            app:setSelectedData="@={detailExerciseSettingsViewModel.seriesValue}"/>
+            app:setData="@{detailExerciseSettingsViewModel.listSet}"
+            app:setSelectedData="@={detailExerciseSettingsViewModel.setValue}"/>
 
         <Spinner
             android:id="@+id/detail_exercise_settings_spinner_reps"
