Routine add in progress

--- a/app/src/main/res/navigation/navigation_routine.xml
+++ b/app/src/main/res/navigation/navigation_routine.xml
@@ -11,7 +11,22 @@
         android:label="RoutineExerciseFragment"
         tools:layout="@layout/fragment_routine">
         <argument
-            android:name="id_workout"
+            android:name="id_routine"
             app:argType="integer" />
+        <action
+            android:id="@+id/action_routine_exercise_fragment_to_exerciseProgressFragment"
+            app:destination="@id/exerciseProgressFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/exerciseProgressFragment"
+        android:name="com.mikolove.allmight.views.routine.progress.ExerciseProgressFragment"
+        android:label="ExerciseProgressFragment"
+        tools:layout="@layout/fragment_exercise_progress">
+        <argument android:name="id_workout"
+            app:argType="integer"/>
+        <argument android:name="id_routine"
+            app:argType="integer"/>
+        <argument android:name="id_exercise"
+            app:argType="integer"/>
     </fragment>
 </navigation>
